Added A latex folder for some stuff, and modified the correspondant excel files

--- a/data/Maths/Latex/Problèmes Mathraining/#4227/#4227.tex
+++ b/data/Maths/Latex/Problèmes Mathraining/#4227/#4227.tex
@@ -25,6 +25,9 @@ Pour $n=0$, $n=1$ et $n=2$ :
 $$2a_{2m} + 2a_{0} = a_{2m} + a_{2m} \iff \boxed{a_0 = 0}$$
 $$2a_{m+1} + 2a_{1} = a_{2m} + a_{2} \iff 2a_{m+1} + 2 = 4a_{m} + 4a_1 \iff \boxed{a_{m+1} = 2a_{m} + 2}$$
 $$2a_{m+2} + 2a_{2} = a_{2m} + a_{4} \iff 2a_{m+2} + 8 = 4a_{m} + 4a_2 \iff \boxed{a_{m+2} = 2a_{m} + 8}$$
+$$2a_{m+3} + 2a_{3} = a_{2m} + 2a_{3} \iff 2a_{m+3} + 8 = 4a_{m} + 4a_2 \iff \boxed{a_{m+2} = 2a_{m} + 8}$$
 $$\cdots$$
 
+On trouve comme forme générale respectivement : 
+$$a_n = 3\cdot2^{n-1}-2 \text{ pour tout } n \ge 1$$
 \end{document}
